--- a/css/application.css
+++ b/css/application.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: sans-serif;;
 }
 
 body, html {
@@ -14,4 +15,25 @@ body, html {
   width:100%;
   height:100%;
   background: white;
+}
+
+button {
+  position: absolute;
+  top: 1em;
+  left: 1em;
+  z-index: 1;
+  padding: 1em;
+  background-color: white;
+  border: 0.2em solid black;
+  color: black;
+}
+
+p {
+  position: absolute;
+  z-index: 1;
+  bottom: 1em;
+  right: 1em;
+  background: white;
+  border: 0.2em solid black;
+  padding: .5em;
 }
