--- a/css/application.css
+++ b/css/application.css
@@ -17,15 +17,22 @@ body, html {
   background: white;
 }
 
-button {
+.controls {
   position: absolute;
   top: 1em;
-  left: 1em;
+  left: 0.5em;
   z-index: 1;
+}
+
+button, a {
   padding: 1em;
+  margin-left: 0.5em;
   background-color: white;
   border: 0.2em solid black;
   color: black;
+  text-decoration: none;
+  font-size: .9em;
+  cursor: pointer;
 }
 
 p {
